Remove overflow_menu_container tab index = -1.

This line was originally removed in
https://chromium-review.googlesource.com/c/chromium/src/+/1401842, but
due to a bad rebase, got added back in.

Bug: 920996
Change-Id: I54c81ca2b5da6bf21471561ddbceee61c0072b18
Reviewed-on: https://chromium-review.googlesource.com/c/1407964
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Commit-Queue: CJ DiMeglio <lethalantidote@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622299}
Former-commit-id: e7dabda876150d9e46bc3d15f67d30478522536d