third_party/blink/renderer/modules/media_controls/elements/media_control_input_element.cc
@@ -75,8 +75,6 @@ HTMLElement* MediaControlInputElement::CreateOverflowElement(
   if (MediaControlsImpl::IsModern()) {
     overflow_menu_container_ = HTMLDivElement::Create(GetDocument());
     overflow_menu_container_->ParserAppendChild(overflow_menu_text_);
-    // Having the container selectable caused aria output to be duplicated.
-    overflow_menu_container_->setTabIndex(-1);
     UpdateOverflowSubtitleElement(button->GetOverflowMenuSubtitleString());
     element->ParserAppendChild(overflow_menu_container_);
   } else {
